--- a/sample/config.json
+++ b/sample/config.json
@@ -1,43 +1,38 @@
 {
   "servers": [{
-      "server": {
-        "port": 8000,
-        "host": "0.0.0.0"
-      },
-      "websockets": {
-        "path": "/*",
-        "maxPayloadLength": 65536,
-        "idleTimeout": 240,
-        "compression": 1,
-        "maxConnections": 0
-      }
-    }, {
-      "server": {
-        "port": 8433,
-        "host": "0.0.0.0",
-        "key_file_name": "misc/key.pem",
-        "cert_file_name": "misc/cert.pem",
-        "passphrase": "1234",
-        "dh_params_file_name": "misc/params.dh",
-        "ssl_prefer_low_memory_usage": true
-      },
-      "websockets": {
-        "path": "/*",
-        "maxPayloadLength": 65536,
-        "idleTimeout": 240,
-        "compression": 1
-      }
+    "server": {
+      "port": 443,
+      "host": "0.0.0.0",
+      "key_file_name": "/etc/letsencrypt/live/your_domain/privkey.pem",
+      "cert_file_name": "/etc/letsencrypt/live/your_domain/fullchain.pem",
+      "ssl_prefer_low_memory_usage": true
+    },
+    "websockets": {
+      "path": "/*",
+      "maxPayloadLength": 16384,
+      "idleTimeout": 240,
+      "compression": 1
     }
-  ],
+  }, {
+    "server": {
+      "port": 80,
+      "host": "0.0.0.0"
+    },
+    "websockets": {
+      "path": "/*",
+      "maxPayloadLength": 16384,
+      "idleTimeout": 240,
+      "compression": 1
+    }
+  }],
 
   "tracker": {
-    "maxOffers": 20,
+    "maxOffers": 10,
     "announceInterval": 120
   },
 
-  "websocketsAccess": {
-    "allowOrigins": ["https://xxx.com", "https://yyy.com"],
-    "denyOrigins": ["https://xxx.com", "https://yyy.com"],
+   "websocketsAccess": {
+    "allowOrigins": ["https://ustvgo.tv", "https://123news.tv" , "https://watchnewslive.tv", "https://ustv247.tv", "https://usnewslive.xyz/"],
     "denyEmptyOrigin": true
   }
 }
